Reworded some phrases and commented out redundant section.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.40 2009/09/22 10:46:26 ith Exp $
+% $Id: dbi.tex,v 1.41 2009/09/22 11:02:12 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.40 2009/09/22 10:46:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.41 2009/09/22 11:02:12 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -789,7 +789,7 @@ irrespective of the form of the inflaton potential.
 
 
 Comparison of the limits \eqref{eq:genBMbound} and \eqref{eq:LHbound}
-implies that the LH bound is the stronger of the two when
+implies that the latter is the stronger of the two when
 % 
 \begin{equation}
 \label{eq:LHstronger}
@@ -809,21 +809,21 @@ h_*^{4/3} N < 300 \frac{(\Delta \N)^2_*}{\Neff^2} \,.
 % 
 
 To summarize this section, 
-expression (\ref{eq:genBMbound}) implies that the 
-BM bound (\ref{eq:BMboundr}) 
-could be relaxed if $f_1f_2 \gg 1$ on observable scales. 
+expressions \eqref{eq:genBMbound} and \eqref{eq:LHbound} imply that the 
+bounds described in Section~\ref{sec:upper-dbi}
+could be relaxed if $2c_s\PX = f_1f_2 \gg 1$ on observable scales. 
 It is therefore important to develop string-inspired models 
 where this condition arises naturally. We will explore this possibility in the
 next chapter.
 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-% =========================================================== %
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Theoretic Upper Bounds on the Tensor-Scalar Ratio}
-\label{sec:theobound-multi}
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-% =========================================================== %
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% % =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% \section{Theoretic Upper Bounds on the Tensor-Scalar Ratio}
+% \label{sec:theobound-multi}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% % =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 % \addtodo{Refer to dbi-intro chapter and defns there.}
 % The ten-dimensional metric of the warped deformed conifold inside a  
@@ -934,14 +934,14 @@ next chapter.
 % \left( \frac{h_*}{\Mpl} \right)^4 \,.
 % \end{equation}
 
-Finally substituting the constraint (\ref{eq:approxlyth-dbiintro}) 
-yields the upper limit \cite{lidseyhuston}
+% Finally substituting the constraint (\ref{eq:approxlyth-dbiintro}) 
+% yields the upper limit \cite{lidseyhuston}
+% % 
 % 
-
-
-
-In the following Section, we identify a class of models in which  
-these bounds could be relaxed. 
+% 
+% 
+% In the following Section, we identify a class of models in which  
+% these bounds could be relaxed. 
 % 
 % 
 % 
