Change section heading and remove todo.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.41 2009/09/22 11:02:12 ith Exp $
+% $Id: dbi.tex,v 1.42 2009/09/22 13:53:07 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.41 2009/09/22 11:02:12 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.42 2009/09/22 13:53:07 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -99,7 +99,6 @@ by multiple coincident branes \cite{thomasward}.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 %
 
-% \addtodo{Add fuller explanantion}
 In \Rref{bmpaper} Baumann and McAllister (BM)  
 derived a field-theoretic upper bound on the tensor-scalar ratio. They achieved
 this by noting that the four-dimensional Planck mass is related 
@@ -496,7 +495,6 @@ by saturating the WMAP5 limit $\fnleq > -151$, we arrive at
 a lower bound on the tensor-scalar ratio which applies   
 to any model for which the ratio $|\nnleq/\fnleq|$ is 
 negligible:
-\addtodo{ Add working}
 % 
 \begin{equation}
 \label{eq:lowerbound}
@@ -568,7 +566,7 @@ that the constraints on the tensor modes can be satisfied.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{Relaxing the Baumann-McAllister Bound}
+\section{Relaxing the upper bounds}
 % 
 \label{sec:relaxing-dbi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
