--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.30 2009/09/21 14:28:56 ith Exp $
+% $Id: thesis.tex,v 1.31 2009/09/23 13:54:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
 %  twoside,
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.30 2009/09/21 14:28:56 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.31 2009/09/23 13:54:25 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -34,13 +34,13 @@ onehalfspacing % onehalfspacing or doublespacing
 % Include list
 \includeonly{
 abstract,
-% acknowledgements,
+acknowledgements,
 mainintro,
 dbi/dbi-intro,
 dbi/dbi,
-% dbi/multibrane,
-% numerical/perts,
-% numerical/numerical,
+dbi/multibrane,
+numerical/perts,
+numerical/numerical,
 theend
 }
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -70,7 +70,7 @@ theend
 %\listoftables
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-\onehalfspacing
+% \onehalfspacing
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Main introduction
 \include{mainintro}
