--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.42 2009/09/22 13:53:07 ith Exp $
+% $Id: dbi.tex,v 1.43 2009/09/24 11:02:31 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.42 2009/09/22 13:53:07 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.43 2009/09/24 11:02:31 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -80,8 +80,8 @@ requires either a relaxation of the upper limit on $r$ or a blue
 spectral index $(n_s >1)$. The DBI scenario would need 
 to be generalized in a suitable way for the upper bound on $r$
 to be weakened. We identify necessary conditions that a 
-generalized action must satisfy for the Baumann-McAllister
- constraint to be relaxed. 
+generalized action must satisfy for the BM constraint and the newly derived
+bound to be relaxed. 
 Such conditions are shown in Chapter~\ref{ch:multibrane} to be
 realized in a recently proposed IR version of DBI inflation driven
 by multiple coincident branes \cite{thomasward}. 
@@ -99,7 +99,7 @@ by multiple coincident branes \cite{thomasward}.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 %
 
-In \Rref{bmpaper} Baumann and McAllister (BM)  
+In \Rref{bmpaper} Baumann and McAllister
 derived a field-theoretic upper bound on the tensor-scalar ratio. They achieved
 this by noting that the four-dimensional Planck mass is related 
 to the volume of the compactified CY manifold, $V_6$, such that 
@@ -143,7 +143,7 @@ that of the throat (i.e. $V_{6,\mathrm{throat}} < V_{6}$),
 it follows that $\Mpl^2> V_{6,\mathrm{throat}}\kappa_{10}^{-2}$. 
 For a warped $AdS_5 \times X_5$ geometry, this leads to an 
 upper limit on the total variation of the inflaton field in 
-the throat region:
+the throat region in terms of the D3 charge:
 % 
 \begin{equation}
 \label{eq:BMbound-dbi}
@@ -451,7 +451,7 @@ More generally, in UV DBI inflation where the brane moves towards the
 tip of the throat, it is reasonable to assume 
 that the warp factor decreases monotonically 
 with the radial coordinate over the observable range of inflaton values, 
-i.e., that $dh/d \rho \ge 0$. This condition is satisfied for  
+\ie $dh/d \rho \ge 0$. This condition is satisfied for  
 $AdS_5 \times X_5$ compactifications and KS-type solutions. 
 Consequently, the third term in 
 \eq{eq:obscon1} will be semi-negative definite, 
@@ -954,10 +954,10 @@ next chapter.
 We have seen how the standard DBI model appears to be in conflict with
 observations. Many attempts have been made to modify the original scenario in
 order to evade these bounds. These can be classified mainly according to
-whether they involve single and multi fields. 
+whether they involve single and multiple fields. 
 
 Single field models have the same single degree of freedom as DBI inflation but
-rely on other physical mechanisms to ease the above bounds.
+rely on other physical mechanisms to ease the bounds on $r$.
 A natural extension to the single ${\rm D3}$-brane model 
 is to consider a ${\rm D}p$-brane wrapped around a $(p-3)$-cycle of the 
 internal space.
@@ -980,11 +980,8 @@ considered both ${\rm D5}$- and
 ${\rm D7}$-brane models, but concluded that the former case
 required an excessively large background charge in 
 order to relax the bounds on $r$. Whilst this is highly constraining, it is
-still much better than
-the
-case for single ${\rm D3}$-branes which require a much higher background charge
-- and therefore are
-effectively ruled
+still much better than the case for single ${\rm D3}$-branes which require a
+much higher background charge and therefore are effectively ruled
 out as a predictive model. 
 Thus wrapped brane configurations are preferable to
 single brane models but the parameter space of these models is still severly
@@ -1008,15 +1005,15 @@ field ranges can be achieved. These lead to possibly observable tensor modes
 
 
 The warped throat is six-dimensional so it is natural to consider the case when
-the D3-brane is not fixed on the radial trajectory as in
+the D3-brane is not fixed on the radial trajectory and this is done in
 Refs.~\cite{spinflation} and \cite{Huang:2007hh}. Increasing the degrees of
-freedom introduces the possibility of entropy mode production. This leads to a
+freedom introduces the possibility of entropy mode production. There is a
 change in the predictions for the amount and type of non-gaussianity produced
-and can ease the constraints on $r$ \cite{Arroja:2008yy, Langlois:2009ej,
+and the constraints on $r$ can be eased \cite{Arroja:2008yy, Langlois:2009ej,
 Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}. Differences in
 the bi- and tri-spectra could enable multi-field DBI models to be distinguished
-from single field ones. In particular in appears that multi-field DBI models
-have a unique tri-spectrum term with amplitude $\propto \fnlloc\fnleq$
+from single field ones. In particular multi-field DBI models
+have a unique tri-spectrum term with amplitude proportional to $\fnlloc\fnleq$
 \cite{RenauxPetel:2009sj}. This opens the possibility of a distinct
 observational signature for this type of model.
 
@@ -1028,7 +1025,7 @@ or apply the curvaton scenario \cite{Lyth:2001nq} to the DBI case
 
 We have not yet addressed models with multiple branes but only one effective
 degree of freedom. Multiple M5-branes in M-theory act with an effective single
-degree of freedom but the Lythbound is now significantly weakened and large
+degree of freedom but the Lyth bound is now significantly weakened and large
 field ranges are possible \cite{Krause:2007jr}. It is also possible to consider
 the case of $n$ coincident D3-branes in a warped throat \cite{thomasward, hltw,
 Ward:2007gs}. In Chapter~\ref{ch:multibrane} we investigate this model in both
